# data-proc-stream

./: README.md  pyproject.toml
data/dataset1/: file1.csv
data/dataset2/: file2.csv
dataproc/: application.py  dataflow.py  job.py  stream.py
dataproc/listener/: streaming.py
datasets/: example.py  example_dataflow.py  example_stream.py
scala/dataproc/: build.sbt
scala/dataproc/src/main/scala/: CustomQueryExecutionListener.scala
