[tool.poetry]
name = "data-proc-stream"
version = "0.1.0"
description = ""
authors = ["Kevin Nacios <kevin.nacios@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
